<resources>


    <string name="app_name">Badoo_Clone</string>
    <string name="app_name_Only_Badoo">badoo</string>

    <string name="badoo">badoo</string>
    <string name="heu_you_are">Hey! You are ..</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="more_choices">More choices</string>
    <string name="or">OR</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_in">Sign in</string>
    <string name="facebook_privacy">Do not worry! We never post on Facebook</string>
    <string name="terms_of_service">Privacy.Terms of Service</string>
    <string name="tvLoginScreen_EmailOrMobile">Email or mobile</string>
    <string name="tvLoginScreen_Password">Password</string>
    <string name="Button_LoginActivity_SignIn">Sign in</string>
    <string name="tvLoginActivity_ForgotPassword">Forgot Password?</string>
    <string name="tvLoginActivity_Terms">Privacy ∙ Terms of Service</string>

    <string name="tvMainPage_messages_Matches">Matches</string>
    <string name="tvMainPage_messages_Button_MessagesTxt">Messages</string>
    <string name="tvMainPage_messages_Button_ActivityTxt">Activity</string>
    <string name="tvMainPage_messages_Button_RecentFirstTxt">Recent first</string>
    <string name="its_just_a_matter">Its just a matter of time until </string>
    <string name="someone_new">someone new likes you!</string>
    <string name="welcom">Welcome to Badoo💜</string>
    <string name="its_so_great">Its so great to see you</string>

    <string name="tvProfileView_ProfileNameAndAge">Deepika , 24</string>
    <string name="tvProfileView_ProfileHobbies">Singer</string>
    <string name="tvProfileView_ProfileOtherDetails">Works at Masai School</string>

    <string name="next_up">Next up, whats your name?</string>
    <string name="user_name">This is how you will appear on Badoo</string>
    <string name="Continue">Continue</string>
    <string name="register_using_facebook">Register using Facebook</string>

    <string name="whats_your_email">Whats your email?</string>
    <string name="sign_up_with_phone_number">Sign up with phone number instead</string>
    <string name="enter_email">Enter your email</string>

    <string name="when_your_birthday">Hey! Whens your birthday?</string>
    <string name="enter_birthday">Enter your birthday</string>
    <string name="year_over_18">We need this to make sure you are over 18</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="the_honesty_pledge">The Honesty Pledge</string>
    <string name="honesty_quote">Dating is messy.Honestly is how we fight back.Badoo is a place where everyone can be real about who they are and what they are looking for.By being a part of our community,you agree to meet fellow members with openness and respect.</string>
    <string name="community_guidlines">See our community guidlines</string>
    <string name="i_accept">I accept</string>

    <string name="what_do_you_honestly_want">What do you honestly want?</string>
    <string name="dont_worry">Do not worry, you can always change this later!</string>
    <string name="long_term_commitment">To make a long-term commitment</string>
    <string name="what_happens">To see what happens</string>
    <string name="chat_meet_new_people">To chat and meet new people</string>
    <string name="To_date_seriously">To date seriously</string>
    <string name="to_date">To date</string>
    <string name="next">Next</string>

    <string name="picture_time">Picture time!</string>
    <string name="need_a_photo">You need a photo to use </string>
    <string name="badoo_text">Badoo</string>
    <string name="Upload_photo">Upload photo</string>

    <string name="almost_there">Almost there!</string>
    <string name="set_password">Just set a password</string>
    <string name="lets_go">Lets go</string>

    <string name="sexual_orientation">How would you describe your sexual orientation</string>
    <string name="straight">Straight</string>
    <string name="gay">Gay</string>
    <string name="lesbian">Lesbian</string>

    <string name="relation">What is your relationship status?</string>
    <string name="single">Single</string>
    <string name="taken">Taken</string>
    <string name="complicated">Its complicated</string>
    <string name="open">Open</string>

    <string name="drink_smoke">Do you smoke/drink?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sometimes">Sometimes</string>
    <string name="rather_not_say">Id rather not say</string>
    <string name="Name_ProfileView">Existing User, 19</string>
    <string name="BelowName_ProfileView_MainActivity">Preview Profile</string>
    <string name="txt_credits">Credits</string>
    <string name="txt_Premium">Premium</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="complete">People who complete their profiles get more matches!</string>
    <string name="txt_StandOutonBadoo">Stand out on Badoo</string>
    <string name="txt_SaveOnPremium">Save on Premium</string>
    <string name="txt_GetDiscountOnPremium">Try before you buy when you sign up today.</string>
    <string name="btnText_GetPremium">Get Premium</string>
    <string name="txtGetPhotoVerified">Get Photo Verified</string>
    <string name="txtLetPeopleKnow_TheyCanTrustYou">Let people know they can trust you.</string>
    <string name="btntxtTop_up_credits">Top up credits</string>
    <string name="btntxt_Verify_me">Verify me</string>
    <string name="txtAdd_Photos">Add two+ photos</string>
    <string name="txtChooseVariety_Photos">Choose a variety of fun photos of yourself.</string>
    <string name="btntxtChoose_photos">Choose photos</string>
    <string name="txtDontStopSwiping">Dont stop swiping</string>
    <string name="txtNeverMissAMatch">Never miss a match with unlimited right swipes.</string>
    <string name="btnTextGet_Swipes">Get swipes</string>
    <string name="txtGetMatchesFaster">Get matches faster</string>
    <string name="txtUseCreditsToBoostYourProfile">Use credits to boost your profile to get more right swipes.</string>
    <string name="btnText_Top_up_credits">Top up credits</string>
    <string name="txtFind_people_faster">Find people faster</string>
    <string name="txtAdvanced_filters_let_you">Advanced filters let you search better.</string>
    <string name="btnText_Upgrade_filters">Upgrade filters</string>

    <string name="txt_GetDiscountOnPremium">Save 20% on your first premium purchase on Badoo.</string>

    <string name="great_choice">Great choice!</string>
    <string name="the_more_photo">The more photos you</string>
    <string name="the_better">have, the better</string>

    <string name="skip">Skip</string>



</resources>