<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Birthday">

    <ImageView
        android:id="@+id/iv_Logo_Badoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_badoo_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/dp_10"/>

    <TextView
        android:id="@+id/LoginActivity_Badoo_ShadowUnderline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Logo_Badoo"
        android:background="@color/background_grey"
        android:layout_marginTop="@dimen/dp_5"
        />
    <TextView
        android:id="@+id/signUpBirthday_tvWhensYourBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Logo_Badoo"
        android:text="@string/when_your_birthday"
        android:textSize="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/signUpBirthday_tvOver18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpBirthday_tvWhensYourBirthday"
        android:text="@string/year_over_18"
       android:layout_marginTop="@dimen/dp_20"
        />
    <TextView
        android:id="@+id/signUpBirthday_tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUpBirthday_tvMonth"
        app:layout_constraintTop_toBottomOf="@id/signUpBirthday_tvOver18"
        android:text="@string/day"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_20"
        />
    <TextView
        android:id="@+id/signUpBirthday_tvMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signUpBirthday_tvDay"
        app:layout_constraintEnd_toStartOf="@id/signUpBirthday_tvYear"
        app:layout_constraintTop_toBottomOf="@id/signUpBirthday_tvOver18"
        android:text="@string/month"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_20"
        />
    <TextView
        android:id="@+id/signUpBirthday_tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signUpBirthday_tvMonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpBirthday_tvOver18"
        android:text="@string/year"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dp_20"
        />
    <EditText
        android:id="@+id/signUpBirthday_etDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="DD"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/signUpBirthday_tvDay"
        app:layout_constraintStart_toStartOf="@id/signUpBirthday_tvDay"
        app:layout_constraintEnd_toEndOf="@id/signUpBirthday_tvDay"
        />
    <EditText
        android:id="@+id/signUpBirthday_etMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="MM"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/signUpBirthday_tvMonth"
        app:layout_constraintStart_toStartOf="@id/signUpBirthday_tvMonth"
        app:layout_constraintEnd_toEndOf="@id/signUpBirthday_tvMonth"
        />
    <EditText
        android:id="@+id/signUpBirthday_etYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="YYYY"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/signUpBirthday_tvYear"
        app:layout_constraintStart_toStartOf="@id/signUpBirthday_tvYear"
        app:layout_constraintEnd_toEndOf="@id/signUpBirthday_tvYear"
        />

    <TextView
        android:id="@+id/signUpBirthday_tvRegisterUsingFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register_using_facebook"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/theme_purple"
        android:layout_marginBottom="@dimen/dp_20"
        />
    <Button
        android:id="@+id/signUpBirthday_btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signUpBirthday_tvRegisterUsingFacebook"
        android:background="@drawable/rectangle_purple"
        android:text="@string/Continue"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        />
</androidx.constraintlayout.widget.ConstraintLayout>