<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Motive">

    <TextView
        android:id="@+id/signUpMotive_tvWhatYouWant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="@dimen/dp_40"
        android:text="@string/what_do_you_honestly_want"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/signUpMotive_tvDontWorry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpMotive_tvWhatYouWant"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/dont_worry"
        />

    <RadioButton
        android:id="@+id/signUpMotive_rBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpMotive_tvDontWorry"
        />

    <RadioButton
        android:id="@+id/signUpMotive_rBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpMotive_rBtn1"

        />

    <RadioButton
        android:id="@+id/signUpMotive_rBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpMotive_rBtn2"

        />
    <RadioButton
        android:id="@+id/signUpMotive_rBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpMotive_rBtn3"
        />
    <RadioButton
        android:id="@+id/signUpMotive_rBtn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_20"
        android:paddingTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpMotive_rBtn4"

        />
    <TextView
        android:id="@+id/signUpMotive_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signUpMotive_rBtn1"
        app:layout_constraintTop_toTopOf="@id/signUpMotive_rBtn1"
        app:layout_constraintBottom_toBottomOf="@id/signUpMotive_rBtn1"
        android:text="@string/long_term_commitment"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/signUpMotive_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signUpMotive_rBtn2"
        app:layout_constraintTop_toTopOf="@id/signUpMotive_rBtn2"
        app:layout_constraintBottom_toBottomOf="@id/signUpMotive_rBtn2"
        android:text="@string/what_happens"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/signUpMotive_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signUpMotive_rBtn3"
        app:layout_constraintTop_toTopOf="@id/signUpMotive_rBtn3"
        app:layout_constraintBottom_toBottomOf="@id/signUpMotive_rBtn3"
        android:text="@string/chat_meet_new_people"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/signUpMotive_tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signUpMotive_rBtn4"
        app:layout_constraintTop_toTopOf="@id/signUpMotive_rBtn4"
        app:layout_constraintBottom_toBottomOf="@id/signUpMotive_rBtn4"
        android:text="@string/To_date_seriously"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/signUpMotive_tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signUpMotive_rBtn5"
        app:layout_constraintTop_toTopOf="@id/signUpMotive_rBtn5"
        app:layout_constraintBottom_toBottomOf="@id/signUpMotive_rBtn5"
        android:text="@string/to_date"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/signUpMotive_tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/circle_white"
        android:drawableStart="@drawable/arrow_next"
        android:padding="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        />

</androidx.constraintlayout.widget.ConstraintLayout>